--- a/layouts/partials/js.html
+++ b/layouts/partials/js.html
@@ -29,7 +29,7 @@
         {{- if (.defer | default true) -}}
           {{- safeHTMLAttr (print " defer") -}}
         {{- end -}}
-        {{- safeHTMLAttr (printf " src=\"%s\"" ($script.RelPermalink | relLangURL)) -}}></script>
+        {{- safeHTMLAttr (printf " src=\"%s\"" ($script.Permalink | relLangURL)) -}}></script>
     {{- else if .script -}}
       {{ .script | safeHTML }}
     {{- end -}}
